--- a/app_noticias/templates/app_noticias/detalhe.html
+++ b/app_noticias/templates/app_noticias/detalhe.html
@@ -14,6 +14,6 @@
             {% endfor %}
       </p>
       <div>{{noticia.conteudo | linebreaks}} </div>
-      <a href="http://localhost:8000/"><h2>voltar</h2></a>
+      <a href="http://localhost:8000/noticias/"><h2>voltar</h2></a>
   </body>
 </html>
