--- a/app_noticias/templates/app_noticias/inicial.html
+++ b/app_noticias/templates/app_noticias/inicial.html
@@ -1,7 +1,7 @@
 <h1>Notícias relacionadas a {{tag}}</h1>
 {% for noticia in noticia %}
 	<div>
-        <a href="http://localhost:8000/noticia/{{ noticia.id }}"><h2>{{noticia.titulo}}</h2></a>
+        <a href="http://localhost:8000/noticias/{{ noticia.id }}"><h2>{{noticia.titulo}}</h2></a>
 		<br>
 	</div>
 {% endfor %}
